--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -6,10 +6,11 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    // "skipLibCheck": true,
+    "target": "es2017",
+    "typeRoots": ["node_modules/@types"]
   },
   "compileOnSave": true,
-  "include": [
-    "src"
-  ]
+  "include": ["src"],
+  "exclude": ["../src"]
 }
