--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.9.1",
+    "axios": "^0.21.0",
     "clsx": "^1.1.1",
     "dayjs": "^1.9.7",
     "firebase": "^8.1.2",
@@ -16,6 +17,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "^2.2.0",
+    "react-query": "^2.26.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-use": "^15.3.4",
