--- a/functions/package.json
+++ b/functions/package.json
@@ -23,7 +23,8 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "superstruct": "^0.15.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
