--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "^2.2.0",
-    "react-query": "^2.26.3",
+    "react-query": "^3.31.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-use": "^15.3.4",
@@ -25,10 +25,10 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "concurrently \"npm run start:cms\" \"npm run start:emulators\"",
+    "start:cms": "react-scripts start",
+    "start:emulators": "cd functions && concurrently \"npm run watch\" \"firebase emulators:start\"",
+    "build:cms": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,10 +50,11 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.165",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "@types/lodash": "^4.14.165",
-    "@types/react-router-dom": "^5.1.6"
+    "@types/react-router-dom": "^5.1.6",
+    "concurrently": "^7.0.0"
   }
 }
